switch to docker

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,11 +10,7 @@ executor{
     jobName = { "$task.tag" }
 }
 
-singularity {
-	enabled = true
-	autoMounts = true
-	cacheDir = "work/singularity"
-}
+docker.enabled = true
 
 params {
     outdir = "output"
@@ -24,11 +20,12 @@ params {
 	s = "4W"
 	t = "false"
 	n = 1
+	c = "grpiccoli/longqc:latest"
 }
 
 process {
-	memory = 62.GB
-	cpus = 24
+	memory = 20.GB
+	cpus = 12
 }
 
 profiles {
