switch to docker and alpine

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,30 +10,24 @@ executor{
     jobName = { "$task.tag" }
 }
 
-docker.enabled = true
-
 params {
     outdir = "output"
 	o ="$outdir/seq_quality"
 	i = "4G"
-	x = "pb-rs2"
+	x = "pb-hifi"
 	s = "4W"
 	t = "false"
 	n = 1
 	c = "grpiccoli/longqc:latest"
+	o_i="$params.outdir/indexes"
 }
 
 process {
-	memory = 20.GB
+	memory = 24.GB
 	cpus = 12
 }
 
 profiles {
-	local {
-		process{
-			executor = 'local'
-		}
-	}
     rapoi {
 		process {
 			executor = 'slurm'
