--- a/nextflow.config
+++ b/nextflow.config
@@ -22,6 +22,12 @@ params {
 	o_i="$params.outdir/indexes"
 }
 
+singularity {
+	enabled = true
+	autoMounts = true
+	cacheDir = "work/singularity"
+}
+
 process {
 	memory = 24.GB
 	cpus = 12
