standard options and removed env from dockerfile for singularity compatibility

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,35 +10,33 @@ executor{
     jobName = { "$task.tag" }
 }
 
-params {
-    outdir = "output"
-	o ="$outdir/seq_quality"
-	i = "4G"
-	x = "pb-hifi"
-	s = "4W"
-	t = "false"
-	n = 1
-	c = "grpiccoli/longqc:latest"
-	o_i="$params.outdir/indexes"
-}
-
 singularity {
 	enabled = true
 	autoMounts = true
 	cacheDir = "work/singularity"
 }
 
-process {
-	memory = 24.GB
-	cpus = 12
-}
+params {
+	//arguments
+	a = "sampleqc -x pb-hifi -o longqc -m 2"
 
-profiles {
-    rapoi {
-		process {
-			executor = 'slurm'
-			time = '1h'
-			queue = 'quicktest'
-		}
-	}
+	//output directory
+    outdir = "output"
+	//output subdirectory
+	o ="$outdir/seq_quality"
+
+	//max memory 2G per processor
+	m = "24.GB"
+	//max cpus
+	p = "12"
+
+	//container
+	c = "grpiccoli/longqc:latest"
+
+	//executor
+	e = "local"
+	//queue name
+	q = "bigmem"
+	//max time
+	t = "4h"
 }
