--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,8 @@ singularity {
 
 params {
 	//arguments
+	//requires optional entry for ONT
+	//create a config file
 	a = "sampleqc -x pb-hifi -o longqc -m 2"
 
 	//output directory
