--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{secrets.DOCKER_USER}}/alv-decon:latest
+      run: docker build . --file Dockerfile --tag ${{secrets.DOCKER_USER}}/longqc_docker:latest
 
     - name: Docker Push
-      run: docker push ${{secrets.DOCKER_USER}}/alv-decon
+      run: docker push ${{secrets.DOCKER_USER}}/longqc_docker
