--- a/nextflow.config
+++ b/nextflow.config
@@ -33,7 +33,7 @@ params {
 	p = "12"
 
 	//container
-	c = "jd21/longqc_docker:latest"
+	c = "docker://jd21/longqc_docker:latest"
 
 	//executor
 	e = "local"
